[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools"

[project]
name = "floryn"
version = "0.0.1"
authors = [
    {name = "M Iqbal Tawakal", email = "mit.iqi@gmail.com"}
]
description = "Plot proportionally filled text with color"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
